# AntiVirus

./: .clang-format  CMakeLists.txt  CONFIG_EXAMPLE.json  OUT_SCAN.json  YARA_config.json  example.json  executowanie.txt  index_file.json  main.cpp  output.json  pomysly.txt  virus.txt
AppData/: YARA_config.json  index_file.json  user_settings.json
Cleaner/include/: Cleaner.hpp
Cleaner/source/: Cleaner.cpp
ConfigManager/include/: ConfigManager.hpp
ConfigManager/source/: ConfigManager.cpp
DirectoryManager/include/: Directory.hpp
DirectoryManager/source/: Directory.cpp
ERRORS_PACK/include/: errors.hpp
ERRORS_PACK/source/: errors.cpp
FileManager/include/: File.hpp  FileManager.hpp  HASH-SHA256.hpp  IndexManager.hpp
FileManager/source/: File.cpp  FileManager.cpp  HASH-SHA256.cpp  IndexManager.cpp  optionaIdea.cpp
HELPERS/include/: Constants.hpp  CronManager.hpp  FixedSizeContainer.hpp  ThreadPool.hpp  Types.hpp  json_manager.hpp  quattro.hpp  support.hpp
HELPERS/source/: Contants.cpp  CronManager.cpp  FixedSizeContainer.cpp  json_manager.cpp  quattro.cpp  support.cpp
Indexes/: Legend.json
Indexes/IndexFiles/: VIRUSES_INDEX.json
Logger/include/: Logger.hpp
Logger/source/: Logger.cpp
RuleEngine/include/: Rule.hpp  RuleEngine.hpp
RuleEngine/source/: Rule.cpp  RuleEngine.cpp  YARA-RulesDirectories.csv
Scanner/include/: Scanner.hpp  YARA_Wrapper.hpp
Scanner/source/: Scanner.cpp  YARA_Wrapper.cpp
tests/: test_main.cpp
viruses/: virus1.txt  virus2.txt
